--- a/public/style.css
+++ b/public/style.css
@@ -376,6 +376,61 @@ p.account-exists {
     border-radius: 0 20px 20px 0;
 }
 
+
+/* Dashboard */
+
+.dashboard-header {
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dashboard-header h2 {
+    width: 100%;
+    text-align: center;
+    color: aliceblue;
+    background-color: #21215b;
+    border-radius: 1rem;
+}
+
+.dashboard-content {
+    margin: 0 auto;
+    background-color: aliceblue;
+    padding-bottom: 12rem;
+}
+
+.dashboard-body {
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 1rem;
+}
+
+.card {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: aliceblue;
+    border-radius: 20px;
+    box-shadow: 0 0 100px 0 #00000022;
+    padding: 1rem;
+}
+
+.card-header {
+    text-align: center;
+}
+
+.card-content {
+    text-align: center;
+    font-size: 2rem;
+    color: #E51684;
+}
+
 @media screen and (max-width: 900px) {
     .navbar .appname {
         display: none;
