--- a/public/style.css
+++ b/public/style.css
@@ -115,6 +115,7 @@ form h3 {
     width: 100%;
     height: 15rem;
     background-color: transparent;
+    backdrop-filter: blur(6px);
 }
 
 section.hero {
@@ -419,6 +420,7 @@ p.account-exists {
 .dashboard-content {
     margin: 0 auto;
     background-color: aliceblue;
+    padding-bottom: 10rem;
 }
 
 .dashboard-body {
@@ -499,6 +501,14 @@ tr:nth-of-type(2n+1) {
     text-align: center;
     color: #0bb65ed3;
     font-weight: bold;
+}
+
+footer {
+    width: 100%;
+    padding: 3rem;
+    background-color: aliceblue;
+    text-align: center;
+    border-top: 2px groove #80808011;
 }
 
 @media screen and (max-width: 900px) {
