update css bg image

--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: url("https://www.alderley.com/wp-content/uploads/2021/03/Digital_Cover_Website_1200x675pts.jpg");
+    background-image: url("https://images.prismic.io//intuzwebsite/2ffd5c1e-ada5-4955-8eb8-3d3592d5302c_Frame+14422%402x.png?w=2400&q=80&auto=format,compress&fm=png8");
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
